src/objects/SFDC_Contact_Connector__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Record_Type__c</fullName>
        <description>Record type of main Contact. Populated by LookupRelationshipRecordTypes trigger</description>
        <label>Contact Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Connection</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Defaults to Ticked.</description>
        <label>Current?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick if this person is to be contacted in an emergency.</inlineHelpText>
        <label>Emergency Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keyholder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating whether this relationship shows the keyholder for a Person with Dementia’s home.  (Only available for Personal relationships involving a Person with Dementia.)</description>
        <label>Keyholder?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_of_Kin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating whether this relationship shows a Person with Dementia’s Next of Kin.  (Only available for Personal relationships involving a Person with Dementia.)</description>
        <label>Next of Kin?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PoA_Holder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating whether this relationship shows the individual holding a Power of Attorney for a Person with Dementia.  (Only available for Personal relationships involving a Person with Dementia.)</description>
        <label>PoA Holder?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Carer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating whether this relationship shows a Person with Dementia’s Primary Carer.  (Only available for Personal relationships involving a Person with Dementia.  Ideally should have validation to ensure that each Person with Dementia has a maximum of one Primary Carer.)</description>
        <label>Primary Carer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationships (Related Contact)</relationshipLabel>
        <relationshipName>Related_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The name of the EXTERNAL organisation the Professional is attached to. Do NOT just type in name of the organisation – An external Organisation already on the system must be found, selected and inserted by using the Look-Up function (magnifying glass icon)</inlineHelpText>
        <label>Related Organisation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>External organisation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>R00N30000001JJgjEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Record_Type__c</fullName>
        <description>Record type of related Contact. Populated by LookupRelationshipRecordTypes trigger</description>
        <label>Related Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reverse_Relationship_Type__c</fullName>
        <label>Reverse Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Neighbour of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son/daughter of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sibling of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cousin of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncle/aunt of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nephew/niece of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandson/daughter of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandparent of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son/daughter-in-law of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent in-law of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sibling in-law of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step-child of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step-parent of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step-sibling of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half-sibling of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient of (GP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient of (Consultant)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client of (Social care worker)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client of (Social worker)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient of (Care Manager)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient of (CPN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient of (Admiral nurse)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client of (Care Manager)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community psychiatric nurse of</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reverse_Relationship__c</fullName>
        <formula>CASE( Role_Title__c ,
&quot;GP of&quot;, &quot;Patient of&quot;,
&apos;Consultant of&apos;, &apos;Client of&apos;,
&quot;Voluntary sector worker of&quot;, &quot;Voluntary service user of&quot;,
&quot;Social care worker of&quot;, &quot;Service user of&quot;,
&quot;Social worker of&quot;, &quot;Service user of&quot;,
&quot;Care manager of&quot;, &quot;Client of&quot;,
&quot;Community psychiatric nurse of&quot;, &quot;Patient of&quot;,
&quot;Admiral nurse of&quot;, &quot;Patient of&quot;,
&quot;Neighbour of&quot;, &quot;Neighbour of&quot;,
&quot;Partner of&quot;, &quot;Partner of&quot;,
&quot;Spouse of&quot;, &quot;Spouse of&quot;,
&quot;Parent of&quot;, &quot;Child of&quot;,
&quot;Child of&quot;, &quot;Parent of&quot;,
&quot;Sibling of&quot;, &quot;Sibling of&quot;,
&quot;Cousin of&quot;, &quot;Cousin of&quot;,
&quot;Nephew/neice of&quot;, &quot;Uncle/aunt of&quot;,
&quot;Uncle/aunt of&quot;, &quot;Nephew/neice of&quot;,
&quot;Grandparent of&quot;, &quot;Grandchild of&quot;,
&quot;Grandchild of&quot;, &quot;Grandparent of&quot;,
&quot;Parent in-law of&quot;, &quot;Child in-law of&quot;,
&quot;Child in-law of&quot;, &quot;Parent in-law of&quot;,
&quot;Sibling in-law of&quot;, &quot;Siblng in-law of&quot;,
&quot;Step-parent of&quot;, &quot;Step-child of&quot;,
&quot;Step-child of&quot;, &quot;Step-parent of&quot;,
&quot;Step-sibling of&quot;, &quot;Step-sibling of&quot;,
&quot;Half-sibling of&quot;, &quot;Half-sibling of&quot;,
&quot;Patient of&quot;, &quot;GP of&quot;,
&quot;Friend of&quot;, &quot;Friend of&quot;,
&quot;Voluntary service user of&quot;, &quot;Voluntary sector worker of&quot;,
&quot;&quot; )</formula>
        <label>Reverse Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reverse_Type__c</fullName>
        <formula>CASE(  Type__c,
&apos;Main carer of&apos;, &apos;Cared for by (main)&apos;,
&apos;Secondary carer of&apos;, &apos;Cared for by (secondary)&apos;,
&apos;Associated care professional of&apos;, &apos;Client of&apos;,
&apos;Cared for by (main)&apos;, &apos;Main carer of&apos;,
&apos;Cared for by (secondary)&apos;, &apos;Secondary carer of&apos;,
&apos;Client of&apos;, &apos;Associated care professional of&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reverse Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Title__c</fullName>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>GP of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social care worker of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social worker of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care manager of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community psychiatric nurse of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admiral nurse of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighbour of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sibling of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cousin of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nephew/neice of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncle/aunt of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandparent of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandchild of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent in-law of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child in-law of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sibling in-law of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step-parent of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step-child of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step-sibling of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half-sibling of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary sector worker of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client of (paid carer)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Same_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate that this Person resides as the same address as Person 1</description>
        <inlineHelpText>If this is checked, address of Person1 is the same as that of Person2</inlineHelpText>
        <label>Same Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Indicates the relationship that the existing person has with the person you are detailing below</inlineHelpText>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Consultant of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social care worker of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social worker of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care manager of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community psychiatric nurse of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admiral nurse of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient of (GP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient of (Consultant)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient of (Care Manager)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient of (CPN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient of (Admiral nurse)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client of (Social care worker)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client of (Social worker)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client of (Care manager)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighbour of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son/daughter of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sibling of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cousin of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nephew/niece of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncle/aunt of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandparent of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandson/daughter of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent in-law of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son/daughter-in-law of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sibling in-law of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step-parent of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step-child of</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Relationship</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <recordTypes>
        <fullName>Personal</fullName>
        <active>true</active>
        <description>Personal Relationship</description>
        <label>Personal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Professional</fullName>
        <active>true</active>
        <description>Professional Relationship</description>
        <label>Professional</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>